rtg_tests/negative/unused_import/go.mod
module example.com/rtgtests/negative/unused_import

go 1.25
